content/vault/v1.21.x/content/docs/commands/lease/revoke.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: lease revoke - Command
description: |-
  The "lease revoke" command revokes the lease on a secret, invalidating the
  underlying secret.
---

# lease revoke

The `lease revoke` command revokes the lease on a secret, invalidating the
underlying secret.

## Examples

Revoke a lease:

```shell-session
$ vault lease revoke database/creds/readonly/27e1b9a1-27b8-83d9-9fe0-d99d786bdc83
Success! Revoked lease: database/creds/readonly/27e1b9a1-27b8-83d9-9fe0-d99d786bdc83
```

Revoke a lease which starts with a prefix:

```shell-session
$ vault lease revoke -prefix database/creds
Success! Revoked any leases with prefix: database/creds
```

Force revoke an irrevocable lease which starts with a prefix plus lease ID:

```shell-session
$ vault lease revoke -force -prefix database/creds/test-role/9Y5YA7vmRs2uESbSOInm0BpC
Warning! Force-removing leases can cause Vault to become out of sync with
secret engines!
Success! Force revoked any leases with prefix: database/creds/test-role/9Y5YA7vmRs2uESbSOInm0BpC```
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

- `-force` `(bool: false)` - Delete the lease from Vault even if the secret
  engine revocation fails. This is meant for recovery situations where the
  secret in the target secrets engine was manually removed. If this flag is
  specified, -prefix is also required. This is aliased as "-f". The default is
  false.

- `-prefix` `(bool: false)` - Treat the ID as a prefix instead of an exact lease
  ID. This can revoke multiple leases simultaneously. The default is false.

- `-sync` `(bool: false)` - Make the operation synchronous instead of queuing the
revocations to be done in the background.
